vlib/v/checker/tests/assign_expr_type_err_h.vv
fn main() {
	mut foo := 'hello'
	foo += false
	_ = foo
}
